# airlabels

./: .gitignore  main.py  pyproject.toml  webservice.http
airlabels/: main.py
airlabels/domain/resources/: image.py  resource.py
airlabels/webservice/: setup.py
airlabels/webservice/scopes/: labels.py  resources.py
