[tool.poetry]
name = "airlabels"
version = "0.0.0"
description = "A tool to support labeling operations of machine learning projects."
authors = ["Riccardo Pasianotto <riccardo.pasianotto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
